--- a/app/views/abouts/index.html.erb
+++ b/app/views/abouts/index.html.erb
@@ -1,23 +1,23 @@
+<h2 class="text-center">こんな悩みはありませんか？</h2>
 
-<div class="abouts">
-  <div class="container">
-    <div class="about-title">
-      自分に合ったインストラクターを見つけてスキースキルを伸ばそう！
-    </div>
-    <div class="about-text">
-      <h2>こんな悩みはありませんか？</h2>
-      <div class="user-text">
-        <h2>レッスンを受けたい</h2>
-          <p>✔︎ スキースクールだと集団レッスンで待っている時間の方が長い</p>
-          <p>✔︎ スキースクールだと、インストラクターはランダム</p>
-          <p>✔︎ スキースクールのマンツーマンレッスンだとレッスン料が高額</p>
+<div class="container">
+  <div class="row">
+    <div class="contents">
+      <div class="content">
+        <p>スキー場のスキースクールだとどんな人がレッスンするか分からない</p>
       </div>
-      <div class="instructor-text">
-        <h2>教えたい</h2>
-          <p>✔︎ スキースキルはすごい高いけど、人の教えるタイミングがない</p>
-          <p>✔︎ 好きなスキーで少しでも稼ぎたい</p>
-          <p>✔︎ 指導員の資格は持っているが、スクールに所属していない</p>
+      <div class="content">
+        <p>スキー場のスキースクールだとレッスン料が高額</p>
+      </div>
+      <div class="content">
+        <p>自分のレベルが周りのレベルに合わないかもしれない</p>
+      </div>
+      <div class="content">
+        <p>自分で時間を指定できない</p>
       </div>
     </div>
   </div>
+  
+  <h2 class="text-center">こんな悩みをSnow Lessonは解決します！</h2>
+  
 </div>
