--- a/app/views/top/index.html.erb
+++ b/app/views/top/index.html.erb
@@ -1,1 +1,9 @@
-<p>アイウエオ</p>
+<div class="top-page">
+    <div class="top-image">
+        <div class="row text-center">
+            <h2>あなたにぴったりのインストラクターを見つけませんか？</h2>
+            
+        </div>
+    </div>
+</div>
+        
