--- a/app/views/instructors/search.html.erb
+++ b/app/views/instructors/search.html.erb
@@ -2,7 +2,7 @@
     <% @instructors.each do |instructor| %>
         <p>インストラクター：</p><%= link_to "#{instructor.name}", "/" %></br>
             <% if user_signed_in? && !instructor_signed_in? %>
-                <%= link_to "レッスンを申し込む", user_booking_path %>
+                <%= link_to "レッスンを申し込む", "/user_booking/#{instructor.id}", method: :get %>
             <% end %>
     <% end %>
 <% else %>
