--- a/app/views/layouts/_instructor_signed_in.html.erb
+++ b/app/views/layouts/_instructor_signed_in.html.erb
@@ -4,5 +4,6 @@
         <%= link_to "自己紹介文作成、編集", "/introduction/#{current_instructor.id}/edit", method: :get, class: "post btn btn-primary" %>
         <%= link_to "ジャンル登録、追加", "/genre/#{current_instructor.id}/edit", method: :get, class: "post btn btn-primary" %>
         <%= link_to "マイページ", "/instructors/#{current_instructor.id}", method: :get, class: "post btn btn-primary" %>
+        <%= link_to "レッスン可能日設定", booking_new_path, method: :get, class: "btn btn-primary" %>
         <%= link_to "ログアウト", destroy_instructor_session_path, method: :delete, class: "post btn btn-primary" %>
 </div>
