--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <h3>レッスン申し込みしたお客様一覧</h3>
+            <h3>あなたのレッスンに申し込みしたお客様一覧</h3>
             <% @bookings.each do |booking| %>
                 <p><%= booking.user.name %></p>
             <% end %>
