--- a/app/views/genres/search.html.erb
+++ b/app/views/genres/search.html.erb
@@ -1,11 +1,19 @@
-<% if @genres.present? %>
-    <% @genres.each do |genre| %>
-        <p>インストラクター：</p><%= link_to "#{genre.genre}   #{genre.instructor.name}", "/" %></br>
-            <% if user_signed_in? && !instructor_signed_in? %>
-                <%#= link_to "レッスンを申し込む", "/booking/#{genre.instructor_id}", method: :get %>
-                <%= link_to "レッスンを申し込む", "/user_booking/#{genre.instructor_id}", method: :get %>
-            <% end %>
-    <% end %>
-<% else %>
-    <p>検索結果がありません</p>
-<% end %>
+<div class="container">
+    <div class="row">
+        <div class="col-md-6 col-md-offset-3">
+            <% if @genres.present? %>
+            <% @genres.each do |genre| %>
+                <div class="well">
+                    <p>インストラクター名：<%= link_to "#{genre.instructor.name}", "/instructors/#{genre.instructor_id}", method: :get %></p>
+                        <p>ジャンル：<%= genre.genre %></p>
+                    <% if user_signed_in? && !instructor_signed_in? %>
+                        <p><%= link_to "#{genre.instructor.name}のレッスン一覧", "/user_booking/#{genre.instructor_id}", class: "btn btn-primary", method: :get %></p>
+                    <% end %>
+                <% end %>
+                    <% else %>
+                        <p>検索結果がありません</p>
+                <% end %>
+                </div>
+        </div>
+    </div>
+</div>
