edit instructor show page

--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -14,8 +14,8 @@
             <%= f.label :course, "コース設定" %>
             <%= f.text_field :course, required: true, class: "form-control" %>
             
-            <%= f.label :howlong, "レッスン時間" %>
-            <%= f.number_field :howlong, required: true, class: "form-control" %>
+            <%= f.label :how_long, "レッスン時間" %>
+            <%= f.number_field :how_long, required: true, class: "form-control" %>
             
             <%= f.label :how_many, "レッスン可能人数設定" %>
             <%= f.number_field :how_many, min: 0, max: 20, required: true, class: "form-control" %>
