--- a/app/views/introductions/edit.html.erb
+++ b/app/views/introductions/edit.html.erb
@@ -1,4 +1,4 @@
-<h2 class="text-center">自己紹介文を作ろう！</h2>
+<h2 class="text-center">自己紹介文を編集しよう！</h2>
 
 <div class="row">
     <div class="col-md-6 col-md-offset-3">
