--- a/app/views/user_bookings/index.html.erb
+++ b/app/views/user_bookings/index.html.erb
@@ -1,25 +1,39 @@
 <div class="row">
-    <div class="col-md-6 col-md-offset-3">
-        <h2 class="text-center">
-            予約する日程を選択してください
-        </h2>
-        <% day_count = 1 %>
-        <%# if @bookingsがからのときは %>
-        <%#　候補日なし %>
-        <% @bookings.each do |booking| %>
-            <div class="well">
-                <h3>候補日<%= day_count %></h3>
-                <p>レッスン可能日：<%= booking.lesson_time %></p>
-                <p>レッスン時間：<%= booking.howlong %></p>
-                <p>一人あたりのレッスン料金：<%= booking.fee %>円</p>
-                <p>レッスンの最大人数：<%= booking.how_many %>人</p>
-                <% if booking.booking == 1 %>
-                    <p>ごめんなさい。この日は満員です</p>
-                <% else %>
-                    <%= link_to "候補日#{day_count}で申し込む", "/user_booking/#{booking.id}", method: :post, class: "btn btn-primary" %>
-                <% end %>
-                <% day_count += 1 %>
-            </div>
-        <% end %>
-    </div>
+    <h2 class="text-center">
+        予約する日程を選択してください
+    </h2>
+    
+    <%# if @bookingsがからのときは %>
+    <%#　候補日なし %>
+    <% @bookings.each_with_index do |booking, i| %>
+        <div class="col-md-4 well">
+            <h3>候補日<%= i+1 %></h3>
+            <p>レッスン可能日：<%= booking.lesson_time.to_s(:datetime_jp) %></p>
+            <p>レッスン時間：<%= booking.how_long %></p>
+            <p>一人あたりのレッスン料金：<%= booking.fee %>円</p>
+            <p>レッスンの最大人数：<%= booking.how_many %>人</p>
+            <% if booking.booking == 1 %>
+                <p>ごめんなさい。この日は満員です</p>
+            <% else %>
+                <%= link_to "候補日#{i+1}で申し込む", "/user_booking/#{booking.id}", method: :post, class: "btn btn-primary" %>
+            <% end %>
+        </div>
+    <% end %>
 </div>
+    
+    <%# day_count = 1 %>
+    <%# @bookings.each do |booking| %>
+        <!--<div class="col-md-4 well">
+            <h3>候補日<%#= day_count %></h3>
+            <p>レッスン可能日：<%#= booking.lesson_time.to_s(:datetime_jp) %></p>
+            <p>レッスン時間：<%#= booking.how_long %></p>
+            <p>一人あたりのレッスン料金：<%#= booking.fee %>円</p>
+            <p>レッスンの最大人数：<#%= booking.how_many %>人</p>
+            <%# if booking.booking == 1 %>
+                <p>ごめんなさい。この日は満員です</p>
+            <%# else %>
+                <%#= link_to "候補日#{day_count}で申し込む", "/user_booking/#{booking.id}", method: :post, class: "btn btn-primary" %>
+            <%# end %>
+                <%# day_count += 1 %>
+        </div>-->
+    <%# end %>
