--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,9 +1,13 @@
 <div class="container">
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
-            <h3>あなたのレッスンに申し込みしたお客様一覧</h3>
-            <% @bookings.each do |booking| %>
-                <p><%= booking.user.name %></p>
+            <% if @bookings.blank? %>
+                <h2 class="text-center">まだあなたのレッスンに申し込みしたお客様はいません</h2>
+            <% else %>
+                <h3>あなたのレッスンに申し込みしたお客様一覧</h3>
+                <% @bookings.each do |booking| %>
+                    <p><%= link_to "#{booking.user.name}", "/users/#{booking.user.id}", method: :get %></p>
+                <% end %>
             <% end %>
         </div>
     </div>
