--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -4,14 +4,14 @@
             <h2>インストラクターを検索しよう</h2>
             <%= search_form_for @q, url: instructors_search_path do |f| %>     <!--search_form_forはransack特有のformの書き方-->
                 <%= f.label :name, "インストラクター名検索" %>
-                <%= f.search_field :name_cont, required: true %>     <!--name_contでLIKE句みたいに曖昧検索可能。required: trueとすることで、検索ボックスを空にして検索不能にする-->
+                <%= f.search_field :name_cont, :placeholder => "インストラクター名を入力してね！", required: true %>     <!--name_contでLIKE句みたいに曖昧検索可能。required: trueとすることで、検索ボックスを空にして検索不能にする-->
                 
                 <%= f.submit "インストラクター名検索", class: "btn btn-primary" %>
             <% end %>
               
             <%= search_form_for @g, required: true, url: genre_search_path do |f| %>
                 <%= f.label :genre, "ジャンル検索" %>
-                <%= f.search_field :genre_cont, required: true %>     <!--required: trueとすることで、検索ボックスを空にして検索不能にする-->
+                <%= f.search_field :genre_cont, :placeholder => "ジャンルを入力してね！", required: true %>     <!--required: trueとすることで、検索ボックスを空にして検索不能にする-->
                         
                 <%= f.submit "ジャンル検索", class: "btn btn-primary" %>
             <% end %>
