--- a/app/views/layouts/_user_signed_in.html.erb
+++ b/app/views/layouts/_user_signed_in.html.erb
@@ -1,3 +1,4 @@
 <div class="col-md-6 col-md-offset-3 well">
+    <%= link_to "マイページ", "/users/#{current_user.id}", method: :get, class: "btn btn-primary" %>
     <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "post btn btn-primary" %>
 </div>
