--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,15 @@
   
   <body>
     <%= render "layouts/header" %>
-    
+      
       <%= render "layouts/search" %>
     
         <div class="user_inst_nav">
           <div class="container">
+            
+            <% flash.each do |message_type, message| %>
+              <div class="alert alert-<%= message_type %>"><%= message %></div>   <!--フラッシュメッセージ表示用html-->
+            <% end %>
             
             <div class="row">
                 
