--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,7 @@
         <h2 class="text-center"><%= @user.name %>さんのマイページ</h2>
         <p>レベル：<%= @user.level %></p>
         <p>自己紹介文：<%= @user.introduction %></p>
-        <% if user_signed_in? && !instrucotr_signed_in? %>
+        <% if user_signed_in? && !instructor_signed_in? %>
             <%= link_to "レベル、自己紹介文登録", "/users/#{@user.id}/edit", method: :get, class: "btn btn-primary" %> 
         <% end %>
     </div>
