--- a/app/views/layouts/_search.html.erb
+++ b/app/views/layouts/_search.html.erb
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-6 col-md-offset-3">
             <h2>インストラクターを検索しよう</h2>
-            <%= search_form_for @q, url: instructors_search_path do |f| %>     <!--search_form_forはransack特有のformの書き方-->
+            <%= search_form_for @q, url: instructors_search_path do |f| %>     <!--search_form_forはransack特有の書き方の検索form-->
                 <%= f.label :name, "インストラクター名検索" %>
                 <%= f.search_field :name_cont, :placeholder => "インストラクター名を入力してね！", required: true %>     <!--name_contでLIKE句みたいに曖昧検索可能。required: trueとすることで、検索ボックスを空にして検索不能にする-->
                 
