--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,5 +1,8 @@
 <div class="row">
     <div class="well text-center">
+        <% if current_user.try(:admin?) %>
+            <p>管理者</p>
+        <% end %>
         <h2 class="text-center"><%= @user.name %>さんのマイページ</h2>
         <p>レベル：<%= @user.level %></p>
         <p>自己紹介文：<%= @user.introduction %></p>
